--- a/frontend/src/app/components/view-event/view-event.component.html
+++ b/frontend/src/app/components/view-event/view-event.component.html
@@ -29,7 +29,7 @@
             placeholder="No of Tickets" 
             required 
             class="p-3 rounded-md border border-gray-300 text-gray-600 outline-none transition" />
-          <button (click)="CurrentBooking(event.Event_id,event.Ticket)" class="font-semibold shadow-blue text-blue-700">Book Event</button>
+          <button (click)="CurrentBooking(event.Event_id)" class="font-semibold shadow-blue text-blue-700">Book Event</button>
         </div>
       </div>
     </div>
