Stripe Integration Done

--- a/frontend/src/app/components/admin/admin.component.html
+++ b/frontend/src/app/components/admin/admin.component.html
@@ -85,11 +85,11 @@
                         </table>
                       </div>
                     </div>
-                    <div class='flex justify-between p-4 bg-pink  -100 rounded-lg shadow-md mb-2'>
-                    </div>
+                    <!-- <div class='flex justify-between p-4 bg-pink  -100 rounded-lg shadow-md mb-2'>
+                    </div> -->
                   </div>
           
-                  <div class="max-w-6xl mx-auto">
+                  <!-- <div class="max-w-6xl mx-auto">
                     <div class="flex flex-col my-3 p-6 rounded-xl bg-white shadow-xl hover:shadow-2xl transition-all duration-300">
                         <button (click)="toggleRequests()"
                             class="bg-green-500 hover:bg-green-600 active:bg-green-700 p-4 rounded-lg text-white font-semibold shadow-lg transition duration-200 mb-4 flex items-center w-40">
@@ -134,5 +134,5 @@
                           }
                           </div>
                          
-                          </div>        
+                          </div>         -->
                         </div>
