event ticket booking system ready

--- a/frontend/src/app/components/admin/admin.component.html
+++ b/frontend/src/app/components/admin/admin.component.html
@@ -134,5 +134,9 @@
                           }
                           </div>
                          
-                          </div>         -->
+                          </div>    
+                          
+                          -->
+
+                          <button (click)="AmountCollection()" class = "bg-orange-500 hover:bg-orange-600 active:bg-orange-700 p-4 rounded-lg text-white font-semibold shadow-lg transition duration-200 mb-4 flex items-center w-40">Earning of All Events</button>
                         </div>
