--- a/frontend/src/app/components/admin-view/admin-view.component.html
+++ b/frontend/src/app/components/admin-view/admin-view.component.html
@@ -4,9 +4,9 @@
   <div *ngIf="noeventmessage" class="bg-blue-100 border border-blue-300 text-blue-700 p-4 rounded-lg mb-4 shadow-md">
     {{ noeventmessage }}
   </div>
- 
+  <input type="text" [(ngModel)]="search_filter" (input)="filter_events()" placeholder="Search events..." class = 'p-4 mb-6 rounded-md hover:scale-105 shadow-lg'/>
   <div *ngIf="events.length > 0" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-    <div *ngFor="let event of events" class="bg-white rounded-xl shadow-lg overflow-hidden transform hover:scale-105 transition duration-300">
+    <div *ngFor="let event of filtered_events" class="bg-white rounded-xl shadow-lg overflow-hidden transform hover:scale-105 transition duration-300">
       <div class="p-6">
         <h5 class="text-xl font-bold text-blue-600">Event: {{ event.name }}</h5>
         <p class="text-gray-600 my-2"><strong>Organised By: </strong>{{ event.org }}</p>
@@ -14,7 +14,7 @@
         <p class="text-gray-600"><strong>Date: </strong>{{ formatDate(event.Event_date)}}</p>
         <p class="text-gray-600"><strong>Venue: </strong>{{ event.venue }}</p>
         <p class="text-gray-600"><strong>Ticket Price: </strong>{{ event.ticket_price }}</p>
-        <p class="text-gray-600"><strong>Type: </strong>{{ event.Event_id }}</p>
+        <p class="text-gray-600"><strong>Type: </strong>{{ event.type }}</p>
         <p class="text-gray-600"><strong>Tickets To Sold: </strong>{{ event.avail_ticket }}</p>
       </div>
       
