--- a/frontend/src/app/components/booking/booking.component.html
+++ b/frontend/src/app/components/booking/booking.component.html
@@ -2,36 +2,34 @@
   {{ successmessage }}
 </div>
 
-<div class = "bg-white shadow-lg rounded-lg p-4 ml-4 mr-2 max-w-3xl mx-auto absolute left-50%">
-  <h3 class = "text-3xl font-bold text-gray-800 mb-4">Your Booking Details</h3>
-  <div class="grid grid-cols-2 gap-6 mb-6">
+<div class = "bg-white shadow-lg rounded-lg p-4 ml-4 mr-2 max-w-xl mx-auto absolute left-50%">
+  <h3 class = "text-3xl font-bold text-gray-800 mb-4 mr-7">Your Booking Details</h3>
+  <div class="gap-2 mb-4">
     <label class="text-gray-700 text-xl">
     Location: <strong>{{events?.venue}}</strong>
-    <br>
     <hr>
   </label>
+  <br>
   <label class="text-gray-700 text-xl">
     Event Name: <strong>{{events?.Event_name}}</strong>
-    <br>
     <hr>
   </label>
+  <br>
     <label class="text-gray-700 text-xl">
       Event Date: <strong>{{ formatDate(events?.Event_date)}}</strong>
-      <br>
       <hr>
     </label>
+    <br>
+
     <label class="text-gray-700 text-xl">
       Booking Date: <strong>{{formatDate(booking_date)}}</strong>
-      <br>
       <hr>
     </label>
+    <br>
     <label class="text-gray-700 text-xl">
       Tickets Purchased: <strong>{{tic}}</strong>
-      <br>
       <hr>
     </label>
-    <br>
-    <br>
   </div>
 </div>
   
