--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -27,7 +27,7 @@
         class="p-3 rounded-md border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition"
         #mail = "ngModel"/>
   
-        <h5 class="text-red-500" *ngIf="mail.invalid && mail.touched">Please enter correct email</h5>
+        <h5 class="text-red-500" *ngIf="mail.invalid && mail.touched">Please enter email in the correct format </h5>
         
         <label for="password" class="text-sm font-medium text-gray-700 mb-1">Password</label>
         <input 
