--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -32,13 +32,12 @@
         required 
         class="p-3 rounded-md border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition" />
     </div>
-    
-    <div class="card-block">
-      <button class="btn btn-social-icon btn-google" (click)="signInWithGoogle()">
-        <span class="fa fa-google"></span>
-      </button>
-    </div>
 
+    
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta name="google-signin-client_id" content="1015469568453-jr3b9jqs2ca014ta6h8s0o24l34ocruf.apps.googleusercontent.com">    
+    <div class="g-signin2" data-onsuccess="onSignIn"></div> 
     <button 
       type="submit" 
       class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-4 rounded-md shadow transition duration-200 mt-2 disabled:opacity-50 disabled:cursor-not-allowed active:bg-blue-800 active:translate-y-0.5"
