--- a/frontend/src/app/components/add-event/add-event.component.html
+++ b/frontend/src/app/components/add-event/add-event.component.html
@@ -80,7 +80,9 @@
           required
         >
         <div *ngIf="imageError" class="error">
-          {{ imageError }}
+          <p class = "text-red-500">
+            Valid Files Formats jpeg/Png/jpg are only allowed
+          </p>
         </div>
 
         <label for="type" class="text-sm font-xl font-bold text-blue-700 mb-1">Event Type</label>
