--- a/frontend/src/app/components/add-event/add-event.component.html
+++ b/frontend/src/app/components/add-event/add-event.component.html
@@ -1,15 +1,11 @@
 <div class="flex flex-col md:flex-row items-center justify-between mb-9 w-full">
-
-  <button (click)="CreateEvent()" class="bg-blue-500 hover:bg-blue-600 active:bg-blue-700 p-3 px-6 rounded-full text-white font-semibold shadow-lg">
-    Create Event
-  </button>
   
     <button (click)="viewEvents()" class="bg-green-500 hover:bg-green-600 active:bg-green-700 p-3 px-6 rounded-full text-white font-semibold shadow-lg">
       View Events
     </button>
   
-  <button (click)="EventsBooked()" class="bg-purple-500 hover:bg-purple-600 active:bg-purple-700 p-3 px-6 rounded-full text-white font-semibold shadow-lg">
-    Events Booked
+  <button (click)="Dashboard()" class="bg-purple-500 hover:bg-purple-600 active:bg-purple-700 p-3 px-6 rounded-full text-white font-semibold shadow-lg">
+    Dashboard
   </button>
 </div>
 
