--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -43,11 +43,8 @@
   </button>
 
   <div class="divider"></div>
-
-  <hr>
   <br>
-  <p class = "sig-google text-red-800">OR</p>
-  <!-- <p class = "sign-in-google text-blue-800">Sign In With Google</p> -->
+  <p class = "sign-in-google text-blue-800">Sign In With Google</p>
   
   <label for="role" class="text-sm font-xl font-bold text-blue-700 mb-1">Choose Your Role</label>
   <select [(ngModel)]="role" name="role" class="p-3 rounded-md border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition">
