--- a/frontend/src/app/components/organizer/organizer.component.html
+++ b/frontend/src/app/components/organizer/organizer.component.html
@@ -5,13 +5,9 @@
     Create Event
   </button>
   
-    <button (click)="viewEvents()" class="bg-green-500 hover:bg-green-600 active:bg-green-700 p-3 px-6 rounded-full text-white font-semibold shadow-lg">
-      View Events
+    <button (click)="Dashboard()" class="bg-purple-500 hover:bg-purple-600 active:bg-purple-700 p-3 px-6 rounded-full text-white font-semibold shadow-lg">
+      Dashboard
     </button>
-  
-  <button (click)="EventsBooked()" class="bg-purple-500 hover:bg-purple-600 active:bg-purple-700 p-3 px-6 rounded-full text-white font-semibold shadow-lg">
-    Events Booked
-  </button>
 </div>
 
 <div class="container mx-auto">
