--- a/frontend/src/app/components/t-a/t-a.component.html
+++ b/frontend/src/app/components/t-a/t-a.component.html
@@ -1,12 +1,11 @@
-<div *ngFor="let amt of amount; let i =index" class="bg-white rounded-xl shadow-lg transform hover:scale-105 transition duration-300 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-    <div class="p-6">
+
+<h2 class="ml-60 text-4xl text-black-700 font-bold justify-between ">Total Amount Collected</h2>
+<div class = "p-3 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+  <div *ngFor="let amt of amount; let i =index" class=" p-6 bg-white shadow-xl rounded-md transform hover:scale-105">
       <h5 class="text-2xl font-bold text-blue-600"><strong>{{i+1}}.Event Name: </strong>{{ amt.name }}</h5>
       <h3 class="text-gray-700 text-lg"><strong>Organised By:</strong> {{ amt.org }}</h3>
       <h3 class="text-gray-700 text-lg"><strong>Ticket Solds:</strong>{{ amt.Ticket}}</h3>
       <h3 class="text-gray-700 text-lg"><strong>Ticket Price: </strong>{{amt.ticket_price}}</h3>
       <h3 class="text-gray-700 text-lg"><strong>Total Amount Collected: </strong>{{amt.Total_Amount }}</h3>
-    <br>
-    <hr>
-
-    </div>
+</div>
 </div>
