--- a/frontend/src/app/components/user/user.component.html
+++ b/frontend/src/app/components/user/user.component.html
@@ -19,8 +19,15 @@
         <path d="M8 9a3 3 0 100-6 3 3 0 000 6zM8 11a6 6 0 016 6H2a6 6 0 016-6zM16 7a1 1 0 10-2 0v1h-1a1 1 0 100 2h1v1a1 1 0 102 0v-1h1a1 1 0 100-2h-1V7z" />
       </svg>
       View Events
-    </button>
+    </button> 
     
+    <button (click)="SeeConnection()" class="bg-gray-500 hover:bg-green-600 active:bg-green-700 p-3 px-6 rounded-full text-white font-semibold shadow-lg transition-transform duration-300 transform hover:scale-105 flex items-center">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-3" viewBox="0 0 20 20" fill="currentColor">
+        <path d="M8 9a3 3 0 100-6 3 3 0 000 6zM8 11a6 6 0 016 6H2a6 6 0 016-6zM16 7a1 1 0 10-2 0v1h-1a1 1 0 100 2h1v1a1 1 0 102 0v-1h1a1 1 0 100-2h-1V7z" />
+      </svg>
+      Let's Chat
+    </button>
+
     <!-- Check Your Bookings Button -->
     <button (click)="SeeBookings()" class="bg-purple-500 hover:bg-purple-600 active:bg-purple-700 p-3 px-6 rounded-full text-white font-semibold shadow-lg transition-transform duration-300 transform hover:scale-105 flex items-center">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-3" viewBox="0 0 20 20" fill="currentColor">
